# ecofarm

MBMC_Hackathon/: package-lock.json  package.json
MBMC_Hackathon/src/: App.jsx  Header.jsx  LandingPage.jsx  styles.css
MBMC_Hackathon/src/pages/: Detection.jsx
backend/: .cache.sqlite  .env  .gitignore  chat_service.py  constants.py  main.py  model.ipynb  model.py  pyproject.toml  test.py
backend/game_engine/: engine.py
docs/: architecture.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: GamePage.jsx  Home.jsx  Landing.jsx
